--- a/com.kubelt.sdk.html
+++ b/com.kubelt.sdk.html
@@ -83,7 +83,11 @@
        ;; resource
        :resource #js {:add sdk.v1.resource/add-js!}
        ;; workspace
-       :workspace #js {:available sdk.v1.workspace/available-js!}})</pre>
+       :workspace #js {:available sdk.v1.workspace/available-js!}
+       ;; development (removed from production builds)
+       ;; TODO
+       ;;:develop #js {:rpc #js {:call sdk.v1.develop.rpc/call-js!}}
+       })</pre>
 				</td>
 			</tr>
 			<tr>
