--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 									<hr />
 								</td>
 								<td class="dep-version">Maven</td>
-								<td class="dep-version">5.0.0</td>
+								<td class="dep-version">4.9.2</td>
 							</tr>
 														<tr>
 								<td class="dep-name">com.taoensso/timbre</td>
@@ -91,12 +91,20 @@
 								<td class="dep-version">1.0.329</td>
 							</tr>
 														<tr>
+								<td class="dep-name">com.rpl/specter</td>
+								<td class="dotted">
+									<hr />
+								</td>
+								<td class="dep-version">Maven</td>
+								<td class="dep-version">1.1.4</td>
+							</tr>
+														<tr>
 								<td class="dep-name">org.web3j/utils</td>
 								<td class="dotted">
 									<hr />
 								</td>
 								<td class="dep-version">Maven</td>
-								<td class="dep-version">5.0.0</td>
+								<td class="dep-version">4.9.2</td>
 							</tr>
 														<tr>
 								<td class="dep-name">metosin/jsonista</td>
@@ -152,6 +160,9 @@
 							</li>
 							<li>
 								<a href="com.kubelt.ddt.html">com.kubelt.ddt</a>
+							</li>
+							<li>
+								<a href="com.kubelt.ddt.auth.html">com.kubelt.ddt.auth</a>
 							</li>
 							<li>
 								<a href="com.kubelt.ddt.cmds.html">com.kubelt.ddt.cmds</a>
@@ -314,6 +325,15 @@
 							</li>
 							<li>
 								<a href="com.kubelt.ddt.cmds.rdf.vocab.html">com.kubelt.ddt.cmds.rdf.vocab</a>
+							</li>
+							<li>
+								<a href="com.kubelt.ddt.cmds.rpc.html">com.kubelt.ddt.cmds.rpc</a>
+							</li>
+							<li>
+								<a href="com.kubelt.ddt.cmds.rpc.call.html">com.kubelt.ddt.cmds.rpc.call</a>
+							</li>
+							<li>
+								<a href="com.kubelt.ddt.cmds.rpc.ls.html">com.kubelt.ddt.cmds.rpc.ls</a>
 							</li>
 							<li>
 								<a href="com.kubelt.ddt.cmds.sdk.html">com.kubelt.ddt.cmds.sdk</a>
@@ -496,6 +516,9 @@
 								<a href="com.kubelt.lib.error.html">com.kubelt.lib.error</a>
 							</li>
 							<li>
+								<a href="http.cljc.html">http.cljc</a>
+							</li>
+							<li>
 								<a href="com.kubelt.lib.http.browser.html">com.kubelt.lib.http.browser</a>
 							</li>
 							<li>
@@ -589,6 +612,42 @@
 								<a href="com.kubelt.proto.key.html">com.kubelt.proto.key</a>
 							</li>
 							<li>
+								<a href="com.kubelt.rpc.html">com.kubelt.rpc</a>
+							</li>
+							<li>
+								<a href="com.kubelt.rpc.client.html">com.kubelt.rpc.client</a>
+							</li>
+							<li>
+								<a href="com.kubelt.rpc.http.html">com.kubelt.rpc.http</a>
+							</li>
+							<li>
+								<a href="com.kubelt.rpc.path.html">com.kubelt.rpc.path</a>
+							</li>
+							<li>
+								<a href="com.kubelt.rpc.request.html">com.kubelt.rpc.request</a>
+							</li>
+							<li>
+								<a href="com.kubelt.rpc.schema.html">com.kubelt.rpc.schema</a>
+							</li>
+							<li>
+								<a href="com.kubelt.rpc.schema.expand.html">com.kubelt.rpc.schema.expand</a>
+							</li>
+							<li>
+								<a href="fs.cljc.html">fs.cljc</a>
+							</li>
+							<li>
+								<a href="com.kubelt.rpc.schema.parse.html">com.kubelt.rpc.schema.parse</a>
+							</li>
+							<li>
+								<a href="com.kubelt.rpc.schema.util.html">com.kubelt.rpc.schema.util</a>
+							</li>
+							<li>
+								<a href="com.kubelt.rpc.schema.validate.html">com.kubelt.rpc.schema.validate</a>
+							</li>
+							<li>
+								<a href="com.kubelt.rpc.schema.zip.html">com.kubelt.rpc.schema.zip</a>
+							</li>
+							<li>
 								<a href="com.kubelt.sdk.html">com.kubelt.sdk</a>
 							</li>
 							<li>
@@ -637,7 +696,100 @@
 								<a href="com.kubelt.spec.network.html">com.kubelt.spec.network</a>
 							</li>
 							<li>
+								<a href="com.kubelt.spec.openrpc.html">com.kubelt.spec.openrpc</a>
+							</li>
+							<li>
+								<a href="com.kubelt.spec.openrpc.component.html">com.kubelt.spec.openrpc.component</a>
+							</li>
+							<li>
+								<a href="com.kubelt.spec.openrpc.content.html">com.kubelt.spec.openrpc.content</a>
+							</li>
+							<li>
+								<a href="com.kubelt.spec.openrpc.error.html">com.kubelt.spec.openrpc.error</a>
+							</li>
+							<li>
+								<a href="com.kubelt.spec.openrpc.example.html">com.kubelt.spec.openrpc.example</a>
+							</li>
+							<li>
+								<a href="com.kubelt.spec.openrpc.external.html">com.kubelt.spec.openrpc.external</a>
+							</li>
+							<li>
+								<a href="com.kubelt.spec.openrpc.info.html">com.kubelt.spec.openrpc.info</a>
+							</li>
+							<li>
+								<a href="com.kubelt.spec.openrpc.info.contact.html">com.kubelt.spec.openrpc.info.contact</a>
+							</li>
+							<li>
+								<a href="com.kubelt.spec.openrpc.info.license.html">com.kubelt.spec.openrpc.info.license</a>
+							</li>
+							<li>
+								<a href="com.kubelt.spec.openrpc.link.html">com.kubelt.spec.openrpc.link</a>
+							</li>
+							<li>
+								<a href="com.kubelt.spec.openrpc.method.html">com.kubelt.spec.openrpc.method</a>
+							</li>
+							<li>
+								<a href="com.kubelt.spec.openrpc.pairing.html">com.kubelt.spec.openrpc.pairing</a>
+							</li>
+							<li>
+								<a href="com.kubelt.spec.openrpc.reference.html">com.kubelt.spec.openrpc.reference</a>
+							</li>
+							<li>
+								<a href="com.kubelt.spec.openrpc.runtime.html">com.kubelt.spec.openrpc.runtime</a>
+							</li>
+							<li>
+								<a href="com.kubelt.spec.openrpc.schema.html">com.kubelt.spec.openrpc.schema</a>
+							</li>
+							<li>
+								<a href="com.kubelt.spec.openrpc.server.html">com.kubelt.spec.openrpc.server</a>
+							</li>
+							<li>
+								<a href="com.kubelt.spec.openrpc.server.variable.html">com.kubelt.spec.openrpc.server.variable</a>
+							</li>
+							<li>
+								<a href="com.kubelt.spec.openrpc.tag.html">com.kubelt.spec.openrpc.tag</a>
+							</li>
+							<li>
 								<a href="com.kubelt.spec.quad.html">com.kubelt.spec.quad</a>
+							</li>
+							<li>
+								<a href="com.kubelt.spec.rpc.html">com.kubelt.spec.rpc</a>
+							</li>
+							<li>
+								<a href="com.kubelt.spec.rpc.available.html">com.kubelt.spec.rpc.available</a>
+							</li>
+							<li>
+								<a href="com.kubelt.spec.rpc.call.html">com.kubelt.spec.rpc.call</a>
+							</li>
+							<li>
+								<a href="com.kubelt.spec.rpc.client.html">com.kubelt.spec.rpc.client</a>
+							</li>
+							<li>
+								<a href="com.kubelt.spec.rpc.discover.html">com.kubelt.spec.rpc.discover</a>
+							</li>
+							<li>
+								<a href="com.kubelt.spec.rpc.doc.html">com.kubelt.spec.rpc.doc</a>
+							</li>
+							<li>
+								<a href="com.kubelt.spec.rpc.execute.html">com.kubelt.spec.rpc.execute</a>
+							</li>
+							<li>
+								<a href="com.kubelt.spec.rpc.github.html">com.kubelt.spec.rpc.github</a>
+							</li>
+							<li>
+								<a href="com.kubelt.spec.rpc.http.html">com.kubelt.spec.rpc.http</a>
+							</li>
+							<li>
+								<a href="com.kubelt.spec.rpc.inflate.html">com.kubelt.spec.rpc.inflate</a>
+							</li>
+							<li>
+								<a href="com.kubelt.spec.rpc.init.html">com.kubelt.spec.rpc.init</a>
+							</li>
+							<li>
+								<a href="com.kubelt.spec.rpc.request.html">com.kubelt.spec.rpc.request</a>
+							</li>
+							<li>
+								<a href="com.kubelt.spec.rpc.schema.html">com.kubelt.spec.rpc.schema</a>
 							</li>
 							<li>
 								<a href="com.kubelt.spec.wallet.html">com.kubelt.spec.wallet</a>
