--- a/com.kubelt.ddt.cmds.rpc.ls.html
+++ b/com.kubelt.ddt.cmds.rpc.ls.html
@@ -19,7 +19,7 @@
 				<td class="docs">
 					<div class="docs-header">
 						<a class="anchor" href="#repl" name="repl">
-							<h1 class="project-name">com.kubelt.ddt.cmds.sdk.core.authenticate</h1>
+							<h1 class="project-name">com.kubelt.ddt.cmds.rpc.ls</h1>
 							<a class="toc-link" href="index.html">toc</a>
 						</a>
 					</div>
@@ -28,16 +28,22 @@
 			</tr>
 			<tr>
 				<td class="docs">
-					<p>Invoke the 'sdk core authenticate' method.</p>
+					<p>List available RPC methods.</p>
 				</td>
 				<td class="codes">
-					<pre class="brush: clojure">(ns com.kubelt.ddt.cmds.sdk.core.authenticate
-  {:copyright &quot;©2022 Proof Zero Inc.&quot; :license &quot;Apache 2.0&quot;}
+					<pre class="brush: clojure">(ns com.kubelt.ddt.cmds.rpc.ls
+  {:copyright &quot;ⓒ2022 Proof Zero Inc.&quot; :license &quot;Apache 2.0&quot;}
   (:require
+   [clojure.string :as cstr]
    [com.kubelt.ddt.auth :as ddt.auth]
    [com.kubelt.ddt.options :as ddt.options]
    [com.kubelt.ddt.prompt :as ddt.prompt]
-   [com.kubelt.ddt.util :as ddt.util]))</pre>
+   [com.kubelt.ddt.util :as ddt.util]
+   [com.kubelt.lib.http.node :as http.node]
+   [com.kubelt.lib.promise :as lib.promise]
+   [com.kubelt.rpc :as rpc]
+   [com.kubelt.rpc.schema :as rpc.schema]
+   [com.kubelt.sdk.v1.core :as sdk.core]))</pre>
 				</td>
 			</tr>
 			<tr>
@@ -46,8 +52,9 @@
 				</td>
 				<td class="codes">
 					<pre class="brush: clojure">(defonce command
-  {:command &quot;authenticate&quot;
-   :desc &quot;Authenticate an account&quot;
+  {:command &quot;list&quot;
+   :aliases [&quot;ls&quot;]
+   :desc &quot;List available RPC methods.&quot;
    :requiresArg false
    :builder (fn [^Yargs yargs]
               ;; Include the common options.
@@ -60,7 +67,20 @@
                  (ddt.auth/authenticate
                   (ddt.options/to-map args)
                   (.-password result)
-                  (fn [result] (prn result))))))})</pre>
+                  (fn [sys]
+                    (-&gt; (sdk.core/rpc-api sys (-&gt; sys :crypto/wallet :wallet/address))
+                        (lib.promise/then (fn [api]
+                                            (let [client (-&gt; {:uri/domain (-&gt; sys :client/p2p :http/host)
+                                                              :uri/port (-&gt; sys :client/p2p :http/port)
+                                                              :uri/path (cstr/join  [&quot;/@&quot; (-&gt; sys :crypto/wallet :wallet/address) &quot;/jsonrpc&quot;])
+                                                              :http/client (:client/http sys)}
+                                                             rpc/init
+                                                             (rpc.schema/schema api))]
+                                              (println (rpc/available client)))))
+                        (lib.promise/catch
+                         (fn [e]
+                           (println (ex-message e))
+                           (prn (ex-data e))))))))))})</pre>
 				</td>
 			</tr>
 			<tr>
