--- a/com.kubelt.lib.error.html
+++ b/com.kubelt.lib.error.html
@@ -56,6 +56,14 @@
 			</tr>
 			<tr>
 				<td class="docs">
+					<h2>error?</h2>
+				</td>
+				<td class="codes">
+					<pre class="brush: clojure"></pre>
+				</td>
+			</tr>
+			<tr>
+				<td class="docs">
 					<p>Is the given value a Kubelt error map?</p>
 				</td>
 				<td class="codes">
@@ -64,6 +72,14 @@
   (and
    (map? x)
    (= :kubelt.type/error (get x :com.kubelt/type))))</pre>
+				</td>
+			</tr>
+			<tr>
+				<td class="docs">
+					<h2>error</h2>
+				</td>
+				<td class="codes">
+					<pre class="brush: clojure"></pre>
 				</td>
 			</tr>
 			<tr>
@@ -79,6 +95,14 @@
 			</tr>
 			<tr>
 				<td class="docs">
+					<h2>explain</h2>
+				</td>
+				<td class="codes">
+					<pre class="brush: clojure"></pre>
+				</td>
+			</tr>
+			<tr>
+				<td class="docs">
 					<p>Return human-friendly description of why some value doesn't conform to the provided schema.</p>
 				</td>
 				<td class="codes">
@@ -90,6 +114,75 @@
      (when (:title (mc/properties schema))
        {:title (:title (mc/properties schema))})
      {:error explain})))</pre>
+				</td>
+			</tr>
+			<tr>
+				<td class="docs">
+					<h2>conform</h2>
+				</td>
+				<td class="codes">
+					<pre class="brush: clojure"></pre>
+				</td>
+			</tr>
+			<tr>
+				<td class="docs">
+					<p>Check that data conforms to the given spec, and execute the supplied body when it does. Otherwise, return an error map that explains the issue(s) that were detected in the data.</p>
+				</td>
+				<td class="codes">
+					<pre class="brush: clojure">(defmacro conform
+  [spec data &amp; body]
+  `(if-not (mc/validate ~spec ~data)
+     (explain ~spec ~data)
+     (do ~@body)))</pre>
+				</td>
+			</tr>
+			<tr>
+				<td class="docs">
+					<h2>conform*</h2>For example:(conform* [spec.rpc/path [:eth :sync]] [spec.rpc/path [:web-3 :sha-3]] :foo)
+				</td>
+				<td class="codes">
+					<pre class="brush: clojure"></pre>
+				</td>
+			</tr>
+			<tr>
+				<td class="docs">
+					<p>Check that pairs of specs and data are all valid, and if all data matches the provided specs then execute the provided body. Otherwise, an error is returned that describes the errors found in the first data that failed validation.</p>
+				</td>
+				<td class="codes">
+					<pre class="brush: clojure">(let [validate-if (fn [spec data body]
+                    `(if-not (mc/validate ~spec ~data)
+                       (explain ~spec ~data)
+                       ~body))]
+  ;; TODO write some tests
+  ;; TODO remove duplicate guard pairs
+  ;; TODO check required number and type of arguments (malli?)
+  (defmacro conform*
+    [&amp; args]
+    (loop [guards (butlast args)
+           body (last args)]
+      (if (empty? guards)
+        body
+        (let [[spec data] (first guards)]
+          (recur (rest guards) (validate-if spec data body)))))))</pre>
+				</td>
+			</tr>
+			<tr>
+				<td class="docs">
+					
+				</td>
+				<td class="codes">
+					<pre class="brush: clojure">(comment
+  (require '[com.kubelt.spec.rpc :as spec.rpc])
+  (conform* [spec.rpc/path [:eth :sync]] [spec.rpc/path [:web-3 :sha-3]] :foo)
+  (conform* [spec.rpc/path [:eth :sync]] [spec.rpc/path [:web-3 :sha-3]] (+ 1 2)))</pre>
+				</td>
+			</tr>
+			<tr>
+				<td class="docs">
+					<h2>from-obj</h2>
+				</td>
+				<td class="codes">
+					<pre class="brush: clojure"></pre>
 				</td>
 			</tr>
 			<tr>
