--- a/com.kubelt.rpc.http.html
+++ b/com.kubelt.rpc.http.html
@@ -19,7 +19,7 @@
 				<td class="docs">
 					<div class="docs-header">
 						<a class="anchor" href="#repl" name="repl">
-							<h1 class="project-name">com.kubelt.ddt.cmds.sdk.core.authenticate</h1>
+							<h1 class="project-name">com.kubelt.rpc.http</h1>
 							<a class="toc-link" href="index.html">toc</a>
 						</a>
 					</div>
@@ -28,39 +28,33 @@
 			</tr>
 			<tr>
 				<td class="docs">
-					<p>Invoke the 'sdk core authenticate' method.</p>
+					<p>HTTP-related utilities.</p>
 				</td>
 				<td class="codes">
-					<pre class="brush: clojure">(ns com.kubelt.ddt.cmds.sdk.core.authenticate
+					<pre class="brush: clojure">(ns com.kubelt.rpc.http
   {:copyright &quot;©2022 Proof Zero Inc.&quot; :license &quot;Apache 2.0&quot;}
   (:require
-   [com.kubelt.ddt.auth :as ddt.auth]
-   [com.kubelt.ddt.options :as ddt.options]
-   [com.kubelt.ddt.prompt :as ddt.prompt]
-   [com.kubelt.ddt.util :as ddt.util]))</pre>
+   [clojure.string :as cstr]))</pre>
 				</td>
 			</tr>
 			<tr>
 				<td class="docs">
-					
+					<h2>user-agent</h2>
 				</td>
 				<td class="codes">
-					<pre class="brush: clojure">(defonce command
-  {:command &quot;authenticate&quot;
-   :desc &quot;Authenticate an account&quot;
-   :requiresArg false
-   :builder (fn [^Yargs yargs]
-              ;; Include the common options.
-              (ddt.options/options yargs)
-              yargs)
-   :handler (fn [args]
-              (ddt.prompt/ask-password!
-               (fn [err result]
-                 (ddt.util/exit-if err)
-                 (ddt.auth/authenticate
-                  (ddt.options/to-map args)
-                  (.-password result)
-                  (fn [result] (prn result))))))})</pre>
+					<pre class="brush: clojure"></pre>
+				</td>
+			</tr>
+			<tr>
+				<td class="docs">
+					<p>Return a user agent string for the RPC client.</p><p>TODO allow optional comment to be passed in and append to UA string. May be useful for indicating build variant, commit-ish, etc.</p>
+				</td>
+				<td class="codes">
+					<pre class="brush: clojure">(defn user-agent
+  [major minor revision]
+  (let [product &quot;com.kubelt.rpc/client&quot;
+        version (cstr/join &quot;.&quot; [major minor revision])]
+    (cstr/join &quot; &quot; [product version])))</pre>
 				</td>
 			</tr>
 			<tr>
