--- a/com.kubelt.spec.openrpc.schema.html
+++ b/com.kubelt.spec.openrpc.schema.html
@@ -19,7 +19,7 @@
 				<td class="docs">
 					<div class="docs-header">
 						<a class="anchor" href="#repl" name="repl">
-							<h1 class="project-name">com.kubelt.ddt.cmds.sdk.core.authenticate</h1>
+							<h1 class="project-name">com.kubelt.spec.openrpc.schema</h1>
 							<a class="toc-link" href="index.html">toc</a>
 						</a>
 					</div>
@@ -28,16 +28,30 @@
 			</tr>
 			<tr>
 				<td class="docs">
-					<p>Invoke the 'sdk core authenticate' method.</p>
+					<p>A schema for an OpenRPC Schema object.</p>
 				</td>
 				<td class="codes">
-					<pre class="brush: clojure">(ns com.kubelt.ddt.cmds.sdk.core.authenticate
+					<pre class="brush: clojure">(ns com.kubelt.spec.openrpc.schema
   {:copyright &quot;©2022 Proof Zero Inc.&quot; :license &quot;Apache 2.0&quot;}
   (:require
-   [com.kubelt.ddt.auth :as ddt.auth]
-   [com.kubelt.ddt.options :as ddt.options]
-   [com.kubelt.ddt.prompt :as ddt.prompt]
-   [com.kubelt.ddt.util :as ddt.util]))</pre>
+   [com.kubelt.spec.openrpc.reference :as openrpc.reference]))</pre>
+				</td>
+			</tr>
+			<tr>
+				<td class="docs">
+					<p>TODO</p>
+				</td>
+				<td class="codes">
+					<pre class="brush: clojure">(def json-schema
+  :any)</pre>
+				</td>
+			</tr>
+			<tr>
+				<td class="docs">
+					<h2>Schema</h2>
+				</td>
+				<td class="codes">
+					<pre class="brush: clojure"></pre>
 				</td>
 			</tr>
 			<tr>
@@ -45,22 +59,15 @@
 					
 				</td>
 				<td class="codes">
-					<pre class="brush: clojure">(defonce command
-  {:command &quot;authenticate&quot;
-   :desc &quot;Authenticate an account&quot;
-   :requiresArg false
-   :builder (fn [^Yargs yargs]
-              ;; Include the common options.
-              (ddt.options/options yargs)
-              yargs)
-   :handler (fn [args]
-              (ddt.prompt/ask-password!
-               (fn [err result]
-                 (ddt.util/exit-if err)
-                 (ddt.auth/authenticate
-                  (ddt.options/to-map args)
-                  (.-password result)
-                  (fn [result] (prn result))))))})</pre>
+					<pre class="brush: clojure">(def schema
+  [:or
+   {:description &quot;Defines the input and output data types. Schema
+Objects MUST follow the specifications outlined in the JSON Schema
+Specification v7. Alternately, any time a Schema Object can be used, a
+Reference Object can be used in its place. This allows referencing
+definitions instead of defining them inline.&quot;}
+   openrpc.reference/reference
+   json-schema])</pre>
 				</td>
 			</tr>
 			<tr>
