deploy: 4aa6cfdad9e293adbf7be217a965432763decf85

--- a/com.kubelt.rpc.html
+++ b/com.kubelt.rpc.html
@@ -289,7 +289,7 @@
       ;; TODO validate result
       ;; :node/browser Returns a promise.
       ;; :jvm Returns a future.
-      ;;(proto.http/request! http-client http-request)))))</pre>
+      (proto.http/request! http-client http-request)))))</pre>
 				</td>
 			</tr>
 			<tr>
