deploy: e6973a6dfb3954d6810e2b5d9c66557b72df6b89

--- a/com.kubelt.lib.error.html
+++ b/com.kubelt.lib.error.html
@@ -35,7 +35,9 @@
   {:copyright &quot;©2022 Proof Zero Inc.&quot; :license &quot;Apache 2.0&quot;}
   (:require
    [malli.core :as mc]
-   [malli.error :as me]))</pre>
+   [malli.error :as me])
+  (:require
+   [com.kubelt.spec.error :as spec.error]))</pre>
 				</td>
 			</tr>
 			<tr>
@@ -138,7 +140,7 @@
 			</tr>
 			<tr>
 				<td class="docs">
-					<h2>conform*</h2>For example:(conform* [spec.rpc/path [:eth :sync]] [spec.rpc/path [:web-3 :sha-3]] :foo)
+					<h2>conform*</h2>TODO write some tests
 				</td>
 				<td class="codes">
 					<pre class="brush: clojure"></pre>
@@ -149,21 +151,28 @@
 					<p>Check that pairs of specs and data are all valid, and if all data matches the provided specs then execute the provided body. Otherwise, an error is returned that describes the errors found in the first data that failed validation.</p>
 				</td>
 				<td class="codes">
-					<pre class="brush: clojure">(let [validate-if (fn [spec data body]
-                    `(if-not (mc/validate ~spec ~data)
-                       (explain ~spec ~data)
-                       ~body))]
-  ;; TODO write some tests
-  ;; TODO remove duplicate guard pairs
-  ;; TODO check required number and type of arguments (malli?)
-  (defmacro conform*
-    [&amp; args]
-    (loop [guards (butlast args)
-           body (last args)]
-      (if (empty? guards)
-        body
-        (let [[spec data] (first guards)]
-          (recur (rest guards) (validate-if spec data body)))))))</pre>
+					<pre class="brush: clojure">(defmacro conform*
+  [&amp; args]
+  (let [guards# (distinct (butlast args))
+        body# (last args)
+        check-for (fn [msg# spec# data#]
+                    `(when-not (mc/validate ~spec# ~data#)
+                      (let [err# (explain ~spec# ~data#)]
+                        (throw (ex-info msg# err#)))))]
+    ;; Validate that there's at least one guard tuple: [spec data].
+    (check-for &quot;invalid guards&quot; spec.error/guards guards#)
+    ;; Validate that a body to execute was provided.
+    (check-for &quot;invalid body&quot; spec.error/body body#)
+    ;; Generate the output form.
+    (loop [guards# guards#
+           body# body#]
+      (if (empty? guards#)
+        (do body#)
+        (let [[spec# data#] (first guards#)]
+          (recur (rest guards#)
+                 `(if-not (mc/validate ~spec# ~data#)
+                    (explain ~spec# ~data#)
+                    ~body#)))))))</pre>
 				</td>
 			</tr>
 			<tr>
@@ -174,7 +183,12 @@
 					<pre class="brush: clojure">(comment
   (require '[com.kubelt.spec.rpc :as spec.rpc])
   (conform* [spec.rpc/path [:eth :sync]] [spec.rpc/path [:web-3 :sha-3]] :foo)
-  (conform* [spec.rpc/path [:eth :sync]] [spec.rpc/path [:web-3 :sha-3]] (+ 1 2)))</pre>
+  (conform* [spec.rpc/path [:eth :sync]] [spec.rpc/path [:web-3 :sha-3]] (+ 1 2))
+
+  (require '[com.kubelt.spec.rpc.client :as spec.rpc.client])
+  (conform* [spec.rpc.client/client {}] :test)
+  (macroexpand '(conform* [spec.rpc.client/client {}] :test))
+  )</pre>
 				</td>
 			</tr>
 			<tr>
