deploy: 399b4fda9820a6a4828ee4ce44db55a9d8a25833

--- a/index.html
+++ b/index.html
@@ -681,6 +681,15 @@
 								<a href="com.kubelt.spec.core.html">com.kubelt.spec.core</a>
 							</li>
 							<li>
+								<a href="com.kubelt.spec.core.config.html">com.kubelt.spec.core.config</a>
+							</li>
+							<li>
+								<a href="com.kubelt.spec.core.config.general.html">com.kubelt.spec.core.config.general</a>
+							</li>
+							<li>
+								<a href="com.kubelt.spec.core.config.security.html">com.kubelt.spec.core.config.security</a>
+							</li>
+							<li>
 								<a href="com.kubelt.spec.crypto.html">com.kubelt.spec.crypto</a>
 							</li>
 							<li>
